--- a/SpeedPluger.csproj
+++ b/SpeedPluger.csproj
@@ -202,9 +202,15 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Genres.cshtml" />
-    <Content Include="Views\Home\Tutorials.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
+    <SplashScreen Include="Views\Home\Genres.cshtml">
+      <BrowseToURL>~/Genres</BrowseToURL>
+    </SplashScreen>
+    <Content Include="Views\Home\Tutorials.cshtml">
+      <BrowseToURL>~/Tutorials</BrowseToURL>
+    </Content>
+    <Content Include="Views\Home\Index.cshtml">
+      <BrowseToURL>~/Home</BrowseToURL>
+    </Content>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
@@ -226,7 +232,9 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Home\PluginBase.cshtml" />
+    <Content Include="Views\Home\PluginBase.cshtml">
+      <BrowseToURL>~/BigBase</BrowseToURL>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
